// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialIcons renders successfully 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    key="Facebook"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-facebook.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="Google"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-google.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="Twitter"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-twitter.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="Instagram"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-instagram.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="Microsoft"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-microsoft-exchange.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="Linkedin"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-linkedin.svg"
      width={40}
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    key="AWS"
    sm={2}
    xs={4}
  >
    <ForwardRef(Box)
      className="makeStyles-icon-2"
      component="img"
      height={40}
      src="logo-aws.svg"
      width={40}
    />
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SocialIcons renders successfully 2`] = `
<ForwardRef(Box)
  className="makeStyles-iconBox-1"
>
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Facebook"
    src="logo-facebook.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Google"
    src="logo-google.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Twitter"
    src="logo-twitter.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Instagram"
    src="logo-instagram.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Microsoft"
    src="logo-microsoft-exchange.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="Linkedin"
    src="logo-linkedin.svg"
    width={30}
  />
  <ForwardRef(Box)
    className="makeStyles-inlineIcon-3"
    component="img"
    height={30}
    key="AWS"
    src="logo-aws.svg"
    width={30}
  />
</ForwardRef(Box)>
`;
